# RA-Distill

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_example.py
ra_distill/: __init__.py  losses.py  models.py  retrieval.py  synthetic.py  train.py
scripts/: run_example.sh
tests/: test_forward.py
